# pia

./: .gitignore  README.md  install.sh  pyproject.toml
scripts/: install-hooks.sh
scripts/hooks/: pre-commit
src/pia/: __main__.py  agent.py  api.py  app.py  cli.py  config.py  display.py  executor.py  profiles.py  prompt.py  repl.py  task_manager.py  tui.py  tui.tcss  utils.py
src/pia/plugins/: __init__.py  _base.py  core.py  history.py  memory.py  safety.py  skills.py
src/pia/tools/: __init__.py  _base.py  check_task_status.py  delegate_task.py  edit_file.py  get_task_result.py  read_file.py  run_command.py  search_content.py  search_files.py  spawn_background_task.py  web_fetch.py  write_file.py
tests/: helpers.py  test_agent.py  test_api.py  test_config.py  test_discovery.py  test_executor.py  test_file_tools.py  test_plugins.py  test_profiles.py  test_prompt.py  test_skills.py  test_tool_registry.py  test_web_fetch.py
