[project]
name = "pia"
version = "0.1.0"
description = "Terminal AI agent — execute and automate tasks from the console"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "httpx>=0.27",
    "rich>=13.0",
    "click>=8.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pylint>=3.0",
    "coverage>=7.0",
]

[project.scripts]
pia = "pia.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pia"]

[tool.pylint.main]
ignore-patterns = ["__main__.py"]

[tool.pylint."messages_control"]
disable = ["C", "R"]
