[project]
name = "pia"
version = "0.1.0"
description = "Terminal AI agent — execute and automate tasks from the console"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "httpx>=0.27",
    "rich>=13.0",
    "click>=8.0",
    "textual>=0.85",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
web = ["markitdown>=0.1"]
dev = [
    "pylint>=3.0",
    "coverage>=7.0",
    "markitdown>=0.1",
]

[project.scripts]
pia = "pia.cli:main"

[project.entry-points."pia.tools"]
# External packages can register tools by adding entries to this group, e.g.:
#   my_tool = "my_package.tools:MyTool"

[project.entry-points."pia.plugins"]
# External packages can register plugins by adding entries to this group, e.g.:
#   my_plugin = "my_package.plugins:MyPlugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pia"]

[tool.pylint.main]
ignore-patterns = ["__main__.py"]

[tool.pylint."messages_control"]
disable = ["C", "R"]
